[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/UI/MenuButton.gd" type="Script" id=1]
[ext_resource path="res://Fonts/ButtonFont.tres" type="DynamicFont" id=2]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="MenuButton" type="Button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -29.0
margin_right = 64.0
margin_bottom = 30.0
grow_horizontal = 2
size_flags_horizontal = 4
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 0.803922, 0.913725, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0.596078, 0.741176, 0.854902, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 1 )
text = "Resume"
flat = true
script = ExtResource( 1 )

[node name="RightArrow" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -24.5
margin_right = 22.0
margin_bottom = 28.5
custom_fonts/font = ExtResource( 2 )
text = "~"
valign = 1

[node name="LeftArrow" type="Label" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -24.0
margin_top = -24.5
margin_right = -2.0
margin_bottom = 28.5
custom_fonts/font = ExtResource( 2 )
text = "~"
valign = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="focus_entered" from="." to="." method="_on_MenuButton_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_MenuButton_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_MenuButton_mouse_entered"]
